--- a/templates/base.html
+++ b/templates/base.html
@@ -2,41 +2,64 @@
 <html>
     <head>
         <title>Lover's Art</title>
+        <!-- bootsrap -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <!-- my styles -->
         <link rel="stylesheet" href="../static/css/style.css">
     </head>
     <body>
 
+        <!-- nav -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+            <!-- dropdown nav button for sm page -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand" href="/cart">
-              <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-cart3" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+
+            <!-- Cart -->
+            <a id="cart-icon" class="navbar-brand" href="/cart">
+              <svg  height="1.5em" viewBox="0 0 16 16" class="bi bi-cart3" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm7 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
               </svg>  
             </a>
           
+            <!-- dropdown menu on sm page/ reg nav for lg page -->
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-
-              <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+              <form id="search" class="form-inline">
+                <div class="input-group">
+                  <input type="text" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="basic-addon1">
+                  <div class="input-group-prepend">
+                    <span class="input-group-text" id="basic-addon1">
+                      <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"/>
+                        <path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"/>
+                      </svg>
+                    </span>
+                  </div>
+                </div>
+              </form>
+              <br />
+              <ul class="navbar-nav mr-auto mt-5 pt-5 mt-lg-0 mx-auto">
                 <li class="nav-item active">
-                  <a class="nav-link" href="/">Home</a>
+                  <a type="button" class="btn btn-outline-secondary nav-link" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/about">About</a>
+                  <a type="button" class="btn btn-outline-secondary nav-link" href="/about">About</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/art">Art</a>
+                  <a type="button" class="btn btn-outline-secondary nav-link" href="/art">Art</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/art_supplies">Art Supplies</a>
+                  <a type="button" class="btn btn-outline-secondary nav-link" href="/art_supplies">Art Supplies</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/help">Help</a>
+                  <a type="button" class="btn btn-outline-secondary nav-link" href="/help">Help</a>
                 </li>
               </ul>
+
               
+
             </div>
         </nav>
 
@@ -44,11 +67,14 @@
 
 
         <footer><div>
-            Copyright 2020 @ Logan Reynolds
+          &#169;2020 Logan Reynolds
         </div></footer>
 
+        <!-- boostrap scripts -->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
+        <!-- my scripts -->
         <script src="../static/js/index.js"></script>
     </body>
 </html>
