base.html done footer added

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,19 +42,19 @@
               <br />
               <ul class="navbar-nav mr-auto mt-5 pt-5 mt-lg-0 mx-auto">
                 <li class="nav-item active">
-                  <a type="button" class="btn btn-outline-secondary nav-link" href="/">Home</a>
+                  <a type="button" class="btn btn-outline-secondary nav-link mx-2 px-4" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a type="button" class="btn btn-outline-secondary nav-link" href="/about">About</a>
+                  <a type="button" class="btn btn-outline-secondary nav-link mx-2 px-4" href="/about">About</a>
                 </li>
                 <li class="nav-item">
-                  <a type="button" class="btn btn-outline-secondary nav-link" href="/art">Art</a>
+                  <a type="button" class="btn btn-outline-secondary nav-link mx-2 px-4" href="/art">Art</a>
                 </li>
                 <li class="nav-item">
-                  <a type="button" class="btn btn-outline-secondary nav-link" href="/art_supplies">Art Supplies</a>
+                  <a type="button" class="btn btn-outline-secondary nav-link mx-2 px-4" href="/art_supplies">Art Supplies</a>
                 </li>
                 <li class="nav-item">
-                  <a type="button" class="btn btn-outline-secondary nav-link" href="/help">Help</a>
+                  <a type="button" class="btn btn-outline-secondary nav-link mx-2 px-4" href="/help">Help</a>
                 </li>
               </ul>
 
@@ -65,6 +65,72 @@
 
         {% block content %}{% endblock %}
 
+
+
+        <!-- Footer -->
+        <footer class="page-footer font-small bg-light
+        pt-4">
+
+          <!-- ----------Footer Links---------- -->
+          <div class="container-fluid text-center text-md-left">
+
+            <div class="row">
+              <div class="col-md-6 mt-md-0 mt-3">
+
+                <!-- Content -->
+                <h5 class="text-uppercase">Fun Fact</h5>
+                <p>Art used to be an Olympic event!</p>
+                <p>
+                  The Olympic games were not always about muscles and the best athletes. The founder of the Games, Baron Pierre de Coubertin, idealized the idea of the true Olympian being a skilled artist and sportsman. Thanks to this, from 1912 and 1948 medals were awarded for sporting-inspired masterpieces of architecture, music, painting, sculpture and literature.
+                </p>
+              </div>
+
+              <hr class="clearfix w-100 d-md-none pb-3">
+              <div class="col-md-3 mb-md-0 mb-3">
+
+                <!-- Links -->
+                <h5 class="text-uppercase">Main</h5>
+                <ul class="list-unstyled">
+                  <li>
+                    <a href="/">Home</a>
+                  </li>
+                  <li>
+                    <a href="/about">About</a>
+                  </li>
+                  <li>
+                    <a href="/art">Art</a>
+                  </li>
+                  <li>
+                    <a href="/art_supplies">Art Supplies</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="col-md-3 mb-md-0 mb-3">
+
+                <!-- Links -->
+                <h5 class="text-uppercase">More</h5>
+
+                <ul class="list-unstyled">
+                  <li>
+                    <a href="/cart">Cart</a>
+                  </li>
+                  <li>
+                    <a href="/help">Help</a>
+                  </li>
+                  <li>
+                    <a href="/jobs">Jobs</a>
+                  </li>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <!-- ----------/Footer Links---------- -->
+
+          <!-- Copyright -->
+          <div class="footer-copyright text-center py-3">&#169;2020 Logan Reynolds</div>
+        </footer>
+        <!-- ----------/Footer---------- -->
 
         <footer><div>
           &#169;2020 Logan Reynolds
