home page header+, img link divs+, spotlight+

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,29 +42,26 @@
               <br />
               <ul class="navbar-nav mr-auto mt-5 pt-5 mt-lg-0 mx-auto">
                 <li class="nav-item active">
-                  <a type="button" class="btn btn-outline-secondary nav-link mx-2 px-4" href="/">Home</a>
+                  <a type="button" class="btn btn-outline-primary nav-link mx-2 px-4 text-primary" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a type="button" class="btn btn-outline-secondary nav-link mx-2 px-4" href="/about">About</a>
+                  <a type="button" class="btn btn-outline-primary nav-link mx-2 px-4 text-primary" href="/about">About</a>
                 </li>
                 <li class="nav-item">
-                  <a type="button" class="btn btn-outline-secondary nav-link mx-2 px-4" href="/art">Art</a>
+                  <a type="button" class="btn btn-outline-primary nav-link mx-2 px-4 text-primary" href="/art">Art</a>
                 </li>
                 <li class="nav-item">
-                  <a type="button" class="btn btn-outline-secondary nav-link mx-2 px-4" href="/art_supplies">Art Supplies</a>
+                  <a type="button" class="btn btn-outline-primary nav-link mx-2 px-4 text-primary" href="/art_supplies">Art Supplies</a>
                 </li>
                 <li class="nav-item">
-                  <a type="button" class="btn btn-outline-secondary nav-link mx-2 px-4" href="/help">Help</a>
+                  <a type="button" class="btn btn-outline-primary nav-link mx-2 px-4 text-primary" href="/help">Help</a>
                 </li>
               </ul>
-
-              
-
             </div>
         </nav>
 
-        {% block content %}{% endblock %}
 
+        {% block content %}{% endblock %}
 
 
         <!-- Footer -->
@@ -84,7 +81,6 @@
                   The Olympic games were not always about muscles and the best athletes. The founder of the Games, Baron Pierre de Coubertin, idealized the idea of the true Olympian being a skilled artist and sportsman. Thanks to this, from 1912 and 1948 medals were awarded for sporting-inspired masterpieces of architecture, music, painting, sculpture and literature.
                 </p>
               </div>
-
               <hr class="clearfix w-100 d-md-none pb-3">
               <div class="col-md-3 mb-md-0 mb-3">
 
@@ -131,10 +127,6 @@
           <div class="footer-copyright text-center py-3">&#169;2020 Logan Reynolds</div>
         </footer>
         <!-- ----------/Footer---------- -->
-
-        <footer><div>
-          &#169;2020 Logan Reynolds
-        </div></footer>
 
         <!-- boostrap scripts -->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
