about pg content fill

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,8 +1,31 @@
 {% extends 'base.html' %}
 {% block content %}
 
+<header>
+    <!-- page heading -->
+    <div class="jumbotron jumbotron-fluid m-1 rounded">
+        <div class="container">
+          <h1 class="display-4 text-center">About</h1>
+        </div>
+    </div>
+</header>
 <main>
 
+    <!-- selfi -->
+    <img class="rounded-circle text-center mt-5 mx-5" scr="../static/img/lover.jpeg" alt="Photo of the artist Lover also known as Logan Reynolds"/>
+    <h2 class="text-center">Lover</h2>
+
+    <!-- info about me as an artist -->
+    <div class="my-5 mx-5 px-3 pt-3 border rounded">
+        <p>Hello,</p>
+
+        <p>I'm Lover the artist and I'm passionate about providing quality art service in the San Francisco area. I always go above and beyond to ensure I get the job done right the first time. My work stands out because I pay close attention to all details of the job.</p>
+
+        <p>I’ve been workong as an artist for a while now, and I love it because it gives me the chance to express myself in ways that everybody loves. I hope you find what your looking for here & enjoy my art!</p>
+
+        <p class="mb-0">Thanks,</p>
+        <p class="mt-0">Lover</p>
+    </div>
 </main>
 
 {% endblock content %}
