products pg udate auto gen products

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,3 +17,9 @@
     }
   }
 /* ----------/nav---------- */
+/* ----------About---------- */
+#selfi{
+    width: 130px;
+
+}
+/* ----------/About---------- */
