--- a/templates/about.html
+++ b/templates/about.html
@@ -12,7 +12,9 @@
 <main>
 
     <!-- selfi -->
-    <img class="rounded-circle text-center mt-5 mx-5" scr="../static/img/lover.jpeg" alt="Photo of the artist Lover also known as Logan Reynolds"/>
+    <div class="text-center">
+        <img id="selfi" class="rounded-circle text-center mt-5 mx-5" src="../static/img/lover.jpeg" alt="Photo of the artist Lover also known as Logan Reynolds"/>
+    </div>
     <h2 class="text-center">Lover</h2>
 
     <!-- info about me as an artist -->
