--- a/templates/products.html
+++ b/templates/products.html
@@ -1,30 +1,37 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<header>
+<header class="mb-5 pb-5">
+  <!-- page heading -->
+  <div class="jumbotron jumbotron-fluid m-1 rounded">
+    <div class="container">
+      <h1 class="display-4 text-center">{{page.name}}</h1>
+    </div>
+  </div>
   <!-- other art pages -->
     <div class="container my-4">
         <div class="row text-center">
           {% for pg in other_pages %}
           <div class="col border rounded">
-            {{pg.name}}
+            <img width="100%" src="{{ pg.src }}" alt="{{ pg.alt }}" />
+            <span>{{pg.name}}</span>
           </div>
           {% endfor %}
         </div>
     </div>
 </header>
-<main>
+<main class="mt-5 pt-5">
   <!-- products -->
   <div class="row row-cols-1 row-cols-md-3 mx-3">
     {% for i in range(12) %}
-      <div class="col mb-4">
+      <a class="col mb-4" href="/item/{{ products[i]._id }}">
           <div class="card h-100">
           <img src="{{products[i].src}}" class="card-img-top" alt="{{products[i].alt}}">
           <div class="card-body">
               <h5 class="card-title">{{products[i].title}}</h5>
           </div>
           </div>
-      </div>
+        </a>
     {% endfor %}
   </div>
 </main>
