--- a/templates/Item.html
+++ b/templates/Item.html
@@ -32,7 +32,7 @@
                   <!-- <input type="submit" value="Add+" class="btn btn-primary"/> -->
                 </div>
                 <div class="col-4">
-                  <input id="num-input" type="number" value="1" width="30px"/>
+                  <input id="num-input" type="number" value="1"/>
                 </div>
                 <div class="col-4">
                   <svg height="32px" viewBox="0 0 16 16" class="bi bi-share border rounded p-1 " fill="currentColor" xmlns="http://www.w3.org/2000/svg">
