home pg, item & base pg updated better ux/ui

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,8 @@
           
             <!-- dropdown menu on sm page/ reg nav for lg page -->
             <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+
+              <!-- Search -->
               <form id="search" class="form-inline">
                 <div class="input-group">
                   <input type="text" class="form-control" placeholder="Search" aria-label="Search" aria-describedby="basic-addon1">
@@ -39,6 +41,7 @@
                   </div>
                 </div>
               </form>
+
               <br />
               <ul class="navbar-nav mr-auto mt-5 pt-5 mt-lg-0 mx-auto">
                 <li class="nav-item active">
