--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,8 @@
+.jumbotron {
+    background-image: url("../img/dancing-ladies.jpg");
+    background-size: cover;
+  }
+
 /* ----------nav---------- */
 #cart-icon{
     position:absolute;
