--- a/templates/Item.html
+++ b/templates/Item.html
@@ -92,7 +92,7 @@
     <div class="row mx-2 my-5">
       {% for i in range(4) %}
       <div class="col border rounded">
-        <img width='100%' src="{{art_products[i].src}}" alt="{{art_products[i].alt}}" />
+        <img width='100%' src="{{products[i].src}}" alt="{{products[i].alt}}" />
       </div>
       {% endfor %}
     </div>
