--- a/templates/Item.html
+++ b/templates/Item.html
@@ -61,14 +61,14 @@
             <table class="table table-bordered">
               <tbody>
 
-                <!-- {% for spec in Specifications %}
+                {% for spec in specifications %}
                 <tr>
                   <th scope="row">{{ spec.header }}</th>
                   <td>{{ spec.info }}</td>
                 </tr>
-                {% endfor %} -->
+                {% endfor %}
 
-                <tr>
+                <!-- <tr>
                   <th scope="row">Expl Hearder</th>
                   <td>Expl info</td>
                 </tr>
@@ -79,7 +79,7 @@
                 <tr>
                   <th scope="row">Expl Hearder</th>
                   <td>Expl info</td>
-                </tr>
+                </tr> -->
                 
               </tbody>
             </table>
