--- a/templates/about.html
+++ b/templates/about.html
@@ -13,7 +13,7 @@
 
     <!-- selfi -->
     <div class="text-center">
-        <img id="selfi" class="rounded-circle text-center mt-5 mx-5" src="../static/img/lover.jpeg" alt="Photo of the artist Lover also known as Logan Reynolds"/>
+        <img id="selfi" class="rounded-circle text-center mt-5 mx-5" src="../static/img/lover.jpg" alt="Photo of the artist Lover also known as Logan Reynolds"/>
     </div>
     <h2 class="text-center">Lover</h2>
 
