--- a/templates/home.html
+++ b/templates/home.html
@@ -22,6 +22,19 @@
         </div>
     </div>
 
+    <!-- <div class="row row-cols-1 row-cols-md-3 m-1">
+      {% for pg in linked_pg %}
+        <a class="col mb-4 text-dark" href="{{ pg.href }}">
+            <div class="card h-100">
+              <img src="{{pg.src}}" class="card-img-top" alt="{{pg.alt}}">
+              <div class="card-body text-center">
+                  <h5 class="card-title">{{pg.title}}</h5>
+              </div>
+            </div>
+          </a>
+      {% endfor %}
+    </div> -->
+
     <!-- spotlight links boostrap cards -->
     <h1 class="mt-5 mb-2 text-center">In The Spotlight</h1>
     <div class="row row-cols-1 row-cols-md-3 m-1">
