--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <body>
 
         <!-- nav -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light">
 
             <!-- dropdown nav button for sm page -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,16 +45,16 @@
               <br />
               <ul class="navbar-nav mr-auto mt-5 pt-5 mt-lg-0 mx-auto">
                 <li class="nav-item active">
-                  <a type="button" class="btn btn-outline-primary nav-link mx-2 px-4 text-primary" href="/">Home</a>
+                  <a type="button" class="btn btn-outline-info nav-link mx-2 px-4 text-info" href="/">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a type="button" class="btn btn-outline-primary nav-link mx-2 px-4 text-primary" href="/about">About</a>
+                  <a type="button" class="btn btn-outline-info nav-link mx-2 px-4 text-info" href="/about">About</a>
                 </li>
                 <li class="nav-item">
-                  <a type="button" class="btn btn-outline-primary nav-link mx-2 px-4 text-primary" href="/art">Art</a>
+                  <a type="button" class="btn btn-outline-info nav-link mx-2 px-4 text-info" href="/art">Art</a>
                 </li>
                 <li class="nav-item">
-                  <a type="button" class="btn btn-outline-primary nav-link mx-2 px-4 text-primary" href="/art_supplies">Art Supplies</a>
+                  <a type="button" class="btn btn-outline-info nav-link mx-2 px-4 text-info" href="/art_supplies">Art Supplies</a>
                 </li>
               </ul>
             </div>
@@ -65,8 +65,7 @@
 
 
         <!-- Footer -->
-        <footer class="page-footer font-small bg-light
-        pt-4">
+        <footer class="page-footer font-small pt-4 text-white">
 
           <!-- ----------Footer Links---------- -->
           <div class="container-fluid text-center text-md-left">
@@ -88,16 +87,16 @@
                 <h5 class="text-uppercase">Main</h5>
                 <ul class="list-unstyled">
                   <li>
-                    <a href="/">Home</a>
+                    <a href="/"><u>Home</u></a>
                   </li>
                   <li>
-                    <a href="/about">About</a>
+                    <a href="/about"><u>About</u></a>
                   </li>
                   <li>
-                    <a href="/art">Art</a>
+                    <a href="/art"><u>Art</u></a>
                   </li>
                   <li>
-                    <a href="/art_supplies">Art Supplies</a>
+                    <a href="/art_supplies"><u>Art Supplies</u></a>
                   </li>
                 </ul>
               </div>
@@ -108,13 +107,13 @@
 
                 <ul class="list-unstyled">
                   <li>
-                    <a href="/cart">Cart</a>
+                    <a href="/cart"><u>Cart</u></a>
                   </li>
                   <li>
-                    <a href="/help">Help</a>
+                    <a href="/help"><u>Help</u></a>
                   </li>
                   <li>
-                    <a href="/jobs">Jobs</a>
+                    <a href="/jobs"><u>Jobs</u></a>
                   </li>
                   </li>
                 </ul>
