--- a/templates/base.html
+++ b/templates/base.html
@@ -12,10 +12,16 @@
         <!-- nav -->
         <nav class="navbar navbar-expand-lg navbar-light">
 
+            <!-- desktop logo -->
+            <img src="../static/img/logo-lover-art.jpg" height="32px" alt="lover's art logo" id="logo" style="position:absolute;left:12px;top:12px;" class="collapse navbar-collapse shadow rounded"/>
+
             <!-- dropdown nav button for sm page -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
+
+            <!-- Mob logo -->
+            <img src="../static/img/logo-lover-art.jpg" height="32px" alt="lover's art logo" id="logo" style="position:absolute;left:80px;top:12px;border-style:none;" class="navbar-toggler shadow rounded m-0 p-0"/>
 
             <!-- Cart -->
             <a id="cart-icon" class="navbar-brand" href="/cart">
