--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 
 <header>
     <!-- page heading -->
-    <div class="jumbotron jumbotron-fluid m-1 rounded">
+    <div class="jumbotron jumbotron-fluid m-1 shadow rounded">
         <div class="container">
           <h1 class="display-4 text-center">Lover</h1>
         </div>
