--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,9 @@
         <nav class="navbar navbar-expand-lg navbar-light">
 
             <!-- desktop logo -->
-            <img src="../static/img/logo-lover-art.jpg" height="32px" alt="lover's art logo" id="logo" style="position:absolute;left:12px;top:12px;" class="collapse navbar-collapse shadow rounded"/>
+            <a href="/" style="position:absolute;left:12px;top:12px;">
+              <img src="../static/img/logo-lover-art.jpg" height="32px" alt="lover's art logo" id="logo" style="position:absolute;left:12px;top:12px;" class="collapse navbar-collapse shadow rounded"/>
+            </a>
 
             <!-- dropdown nav button for sm page -->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,11 +23,14 @@
             </button>
 
             <!-- Mob logo -->
-            <img src="../static/img/logo-lover-art.jpg" height="32px" alt="lover's art logo" id="logo" style="position:absolute;left:80px;top:12px;border-style:none;" class="navbar-toggler shadow rounded m-0 p-0"/>
+            <!-- style="position:absolute;left:80px;top:12px;border-style:none;" -->
+            <a href="/">
+              <img src="../static/img/logo-lover-art.jpg" height="32px" alt="lover's art logo" class="navbar-toggler shadow rounded m-0 p-0" style="position:absolute;left:80px;top:12px;border-style:none;"/>
+            </a>
 
             <!-- Cart -->
             <a id="cart-icon" class="navbar-brand" href="/cart">
-              <svg  height="1.5em" viewBox="0 0 16 16" class="bi bi-cart3" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+              <svg id="cart-icon" height="1.5em" viewBox="0 0 16 16" class="bi bi-cart3" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" d="M0 1.5A.5.5 0 0 1 .5 1H2a.5.5 0 0 1 .485.379L2.89 3H14.5a.5.5 0 0 1 .49.598l-1 5a.5.5 0 0 1-.465.401l-9.397.472L4.415 11H13a.5.5 0 0 1 0 1H4a.5.5 0 0 1-.491-.408L2.01 3.607 1.61 2H.5a.5.5 0 0 1-.5-.5zM3.102 4l.84 4.479 9.144-.459L13.89 4H3.102zM5 12a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm7 0a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm-7 1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm7 0a1 1 0 1 0 0 2 1 1 0 0 0 0-2z"/>
               </svg>  
             </a>
